src/components/app.scss
@import "./vars.scss";
@import "./tinymce.scss";

html {
  font-size: 16px;
}

body {
  -webkit-overflow-scrolling: touch;
}

#app {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  background-color: var(--theme-primary-color);
  overflow: auto;

  &:has(.log-monitor) {
    overflow: hidden;

    > .app {
      overflow: auto;
      height: 100%;
      min-width: 0;
      flex: 1;
    }
  }
}

.app {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: fit-content;
  padding: 40px;
  line-height: 1.5;
  color: $cc-charcoal;
  font-size: pxToRem(16);

  h1 {
    color: var(--theme-secondary-color);
    font-size: pxToRem(32);
    font-weight: 900;
    line-height: 1;
  }
  h2 {
    color: $cc-charcoal;
    font-size: pxToRem(18);
    font-weight: 700;
    line-height: 1;
  }

  .button {
    height: 44px;
    min-width: 100px;
    padding: 5px 10px 5px 10px;
    color: $cc-button-color;
    background-color: $cc-button-default;
    font-weight: bold;
    font-size: pxToRem(20);
    border-radius: 4px;
    border: solid 1.5px $cc-button-border;
    white-space: nowrap;
    cursor: pointer;
    flex-shrink: 0;
    flex-grow: 0;

    &:hover {
      background-color: $cc-button-hover;
    }
    &:focus-visible {
      background-color: $cc-button-hover;
      box-shadow: inset 0 0 0 2.5px $cc-button-focus-ring, inset 0 0 0 3.5px white;
      outline: none;
    }
    &:active {
      background-color: $cc-button-click;
    }
  }

  .version-info {
    font-size: pxToRem(14);
    margin-top: 10px;
    text-align: center;
    color: #bbb;
  }

  .activity {
    width: 1100px;  /* here as fallback in case fixed_width_layout doesn't map to one of the classes below */
    margin-left: auto;
    margin-right: auto;

    &.fixed-width-1100px {
      width: 1100px;
    }
    &.fixed-width-ipad-friendly {
      width: 960px;
    }
    &.responsive {
      width: 100%
    }
  }

}

